# caseconv

./: Cargo.toml  README.md
bindings/node/: README.md  binding.gyp  index.js  package.json  test.js
bindings/node/src/: caseconv.cpp
example/: .gitignore  Makefile  example.c  test.c
include/: caseconv.h
src/: dynamic.rs  ffi.rs  lib.rs
